<resources>
    <string name="app_name">Kherindo</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="logout_action">Log out</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- kherindo -->
    <string name="kherin_title">Kherindo</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_fragment_label">Welcome Fragment</string>

    <!-- sign in -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="signin_button_label">Sign In</string>
    <string name="signin_fragment_label">Sign In Fragment</string>

    <!-- register -->
    <string name="register_button_label">Register</string>
    <string name="register_fragment_label">Register Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- new task -->
    <string name="new_task_title_hint">Title</string>
    <string name="new_task_notes_hint">Notes</string>
    <string name="new_task_button_label">Add</string>
    <string name="cancel_button_label">Cancel</string>

    <!-- progress bar -->
    <string name="signin_loading_text">Loading...</string>

    <!-- todo list -->
    <string name="filter_todo_hint">Search</string>
</resources>
