<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:theme="@style/new_todo_dialog"
        tools:context="com.example.kherindo.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:gravity="left"
            android:padding="20dp"
            android:text="New Task"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:orientation="vertical">
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title_textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/new_task_title_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title_textInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="3"
                        android:paddingLeft="20sp"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/notes_textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:hint="@string/new_task_notes_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/notes_textInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:lines="5"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/select_date_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/secondary"
                    android:padding="10dp"
                    android:text="Select date"
                    android:textColor="@color/white"
                    app:icon="@drawable/outline_calendar_today_24"
                    app:iconGravity="textStart" />

                <Button
                    android:id="@+id/select_time_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/secondary"
                    android:padding="10dp"
                    android:text="Select time"
                    android:textColor="@color/white"
                    app:icon="@drawable/outline_watch_later_24"
                    app:iconGravity="textStart" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_new_task"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary"
                    android:padding="10dp"
                    android:text="@string/new_task_button_label"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/button_cancel"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/mdtp_light_gray"
                    android:padding="10dp"
                    android:text="@string/cancel_button_label"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>